@@ -10,15 +10,15 @@ import static seedu.address.logic.commands.CommandTestUtil.VALID_NAME_AMY;
 import static seedu.address.logic.commands.CommandTestUtil.VALID_NAME_BOB;
 import static seedu.address.logic.commands.CommandTestUtil.VALID_TELEGRAM_HANDLE_AMY;
 import static seedu.address.logic.commands.CommandTestUtil.VALID_TELEGRAM_HANDLE_BOB;
+import static seedu.address.testutil.TypicalGroups.TYPICAL_GROUP_CS2101;
+import static seedu.address.testutil.TypicalGroups.TYPICAL_GROUP_CS2103T;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
 import seedu.address.model.AddressBook;
-import seedu.address.model.group.Description;
 import seedu.address.model.group.Group;
-import seedu.address.model.group.GroupName;
 import seedu.address.model.student.Student;
 
 /**
@@ -27,40 +27,36 @@ import seedu.address.model.student.Student;
 public class TypicalStudents {
 
     public static final Student ALICE = new StudentBuilder().withName("Alice Pauline").withEmail("alice@example.com")
-            .withGroup("CS2103T", "hi").withTelegramHandle("@alice_pauline").build();
+            .withGroup(TYPICAL_GROUP_CS2103T).withTelegramHandle("@alice_pauline").build();
     public static final Student BENSON = new StudentBuilder().withName("Benson Meier").withEmail("johnd@example.com")
-            .withGroup("CS2103T", "hi").withTelegramHandle("@benson_meier").build();
+            .withGroup(TYPICAL_GROUP_CS2103T).withTelegramHandle("@benson_meier").build();
     public static final Student CARL = new StudentBuilder().withName("Carl Kurz").withTelegramHandle("@carl_kurz")
-            .withEmail("heinz@example.com").withGroup("CS2103T", "hi").build();
+            .withEmail("heinz@example.com").withGroup(TYPICAL_GROUP_CS2103T).build();
     public static final Student DANIEL = new StudentBuilder().withName("Daniel Meier")
             .withTelegramHandle("@daniel_meier").withEmail("cornelia@example.com")
-            .withGroup("CS2103T", "hi").build();
+            .withGroup(TYPICAL_GROUP_CS2103T).build();
     public static final Student ELLE = new StudentBuilder().withName("Elle Meyer").withTelegramHandle("@elle_meyer")
-            .withEmail("werner@example.com").withGroup("CS2103T", "hi").build();
+            .withEmail("werner@example.com").withGroup(TYPICAL_GROUP_CS2103T).build();
     public static final Student FIONA = new StudentBuilder().withName("Fiona Kunz").withTelegramHandle("@fiona_kunz")
-            .withEmail("lydia@example.com").withGroup("CS2103T", "hi").build();
+            .withEmail("lydia@example.com").withGroup(TYPICAL_GROUP_CS2103T).build();
     public static final Student GEORGE = new StudentBuilder().withName("George Best").withTelegramHandle("@george_best")
-            .withEmail("anna@example.com").withGroup("CS2103T", "hi").build();
+            .withEmail("anna@example.com").withGroup(TYPICAL_GROUP_CS2103T).build();
 
     // Manually added
     public static final Student HOON = new StudentBuilder().withName("Hoon Meier").withTelegramHandle("@hoon_meier")
-            .withEmail("stefan@example.com").withGroup("CS2103T", "hi").build();
+            .withEmail("stefan@example.com").withGroup(TYPICAL_GROUP_CS2103T).build();
     public static final Student IDA = new StudentBuilder().withName("Ida Mueller").withTelegramHandle("@ida_mueller")
-            .withEmail("hans@example.com").withGroup("CS2103T", "hi").build();
+            .withEmail("hans@example.com").withGroup(TYPICAL_GROUP_CS2103T).build();
 
     // Manually added - Student's details found in {@code CommandTestUtil}
     public static final Student AMY = new StudentBuilder().withName(VALID_NAME_AMY)
             .withTelegramHandle(VALID_TELEGRAM_HANDLE_AMY).withEmail(VALID_EMAIL_AMY)
-            .withGroup(VALID_GROUP_NAME_AMY, VALID_DESC_AMY).build();
+            .withGroup(new GroupBuilder().withGroupName(VALID_GROUP_NAME_AMY).withDescription(VALID_DESC_AMY).build())
+            .build();
     public static final Student BOB = new StudentBuilder().withName(VALID_NAME_BOB)
             .withTelegramHandle(VALID_TELEGRAM_HANDLE_BOB).withEmail(VALID_EMAIL_BOB)
-            .withGroup(VALID_GROUP_NAME_BOB, VALID_DESC_BOB).build();
-
-    //TODO GroupBuilder in the future?
-    public static final Group GROUPCS2103T =
-            new Group(new GroupName("CS2103T"), new Description("A Software engineering module"));
-    public static final Group GROUPCS2101 =
-            new Group(new GroupName("CS2101"), new Description("An effective communication module"));
+            .withGroup(new GroupBuilder().withGroupName(VALID_GROUP_NAME_BOB).withDescription(VALID_DESC_BOB).build())
+            .build();
 
     public static final String KEYWORD_MATCHING_MEIER = "Meier"; // A keyword that matches MEIER
 
@@ -87,6 +83,6 @@ public class TypicalStudents {
     }
 
     public static List<Group> getTypicalGroups() {
-        return new ArrayList<>(Arrays.asList(GROUPCS2103T, GROUPCS2101));
+        return new ArrayList<>(List.of(TYPICAL_GROUP_CS2103T, TYPICAL_GROUP_CS2101));
     }
 }
